--- a/app/src/Internal/res/values/debug_strings.xml
+++ b/app/src/Internal/res/values/debug_strings.xml
@@ -1,8 +1,23 @@
 <resources>
     <string name="debug_drawer_subtitle">Development Settings</string>
     <string name="debug_drawer_title_network">Network</string>
-    <string name="debug_drawer_title_server">Server</string>
-    <string name="debug_drawer_title_logging">Logging</string>
+    <string name="debug_drawer_hint_server">Server</string>
+    <string name="debug_drawer_hint_logging">Logging</string>
     <string name="debug_drawer_custom_url_helper_text">https://localhost:8080…</string>
     <string name="debug_drawer_welcome">Development settings are available in this drawer.</string>
+
+    <string name="debug_drawer_title_build">Build</string>
+    <string name="debug_drawer_header_build_name">Name</string>
+    <string name="debug_drawer_header_build_code">Code</string>
+
+
+    <string name="debug_drawer_title_device">Device</string>
+    <string name="debug_drawer_header_device_make">Make</string>
+    <string name="debug_drawer_header_device_model">Model</string>
+    <string name="debug_drawer_header_device_resolution">Resolution</string>
+    <string name="debug_drawer_header_device_resolution_template">%1$dx%2$d</string>
+    <string name="debug_drawer_header_device_density">Density</string>
+    <string name="debug_drawer_header_device_density_template">%1$ddpi (%2$s)</string>
+    <string name="debug_drawer_header_device_release">Release</string>
+    <string name="debug_drawer_header_device_api">API</string>
 </resources>
