--- a/app/src/Internal/res/values/debug_styles.xml
+++ b/app/src/Internal/res/values/debug_styles.xml
@@ -12,7 +12,7 @@
         <item name="android:windowBackground">#FF000000</item>
     </style>
 
-    <style name="Internal.Widget.DebugDrawer.Header" parent="@style/TextAppearance.AppCompat.Title">
+    <style name="Internal.Widget.DebugDrawer.Title" parent="@style/TextAppearance.AppCompat.Title">
         <item name="fontFamily">sans-serif-condensed</item>
         <item name="android:textStyle">bold</item>
         <item name="android:paddingBottom">2dp</item>
@@ -21,6 +21,24 @@
         <!--        <item name="android:textSize">12sp</item>-->
         <item name="android:layout_marginTop">24dp</item>
         <item name="android:layout_marginBottom">2dp</item>
+    </style>
+
+    <style name="Internal.Widget.DebugDrawer.RowTitle" parent="@style/TextAppearance.AppCompat.Caption">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="fontFamily">sans-serif-condensed</item>
+        <item name="android:textColor">?android:attr/textColorSecondary</item>
+        <item name="android:paddingTop">2dp</item>
+        <item name="android:paddingBottom">2dp</item>
+    </style>
+
+    <style name="Internal.Widget.DebugDrawer.RowValue" parent="Internal.Widget.DebugDrawer.RowTitle">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">?android:attr/textColorPrimary</item>
+        <item name="android:maxLines">1</item>
+        <item name="android:ellipsize">end</item>
+        <item name="android:layout_marginStart">16dp</item>
     </style>
 
     <style name="Internal.Widget.DebugDrawer.DropDown" parent="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu">
