--- a/app/src/Internal/res/layout/debug_drawer.xml
+++ b/app/src/Internal/res/layout/debug_drawer.xml
@@ -47,11 +47,11 @@
                     android:text="@string/debug_drawer_subtitle" />
             </LinearLayout>
 
-            <ImageView
+            <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/logo"
                 android:layout_width="48dp"
                 android:layout_height="48dp"
-                android:src="@drawable/ic_launcher_foreground" />
+                app:srcCompat="@drawable/ic_launcher_foreground" />
         </LinearLayout>
 
         <TextView
@@ -63,7 +63,7 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="?colorPrimary" />
+            android:background="?colorPrimaryDark" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -90,8 +90,8 @@
                 android:layout_gravity="bottom"
                 android:background="@android:color/transparent"
                 android:paddingTop="12dp"
-                android:src="@drawable/ic_baseline_edit_24"
-                android:tint="@color/colorPrimary" />
+                app:srcCompat="@drawable/ic_baseline_edit_24"
+                android:tint="?colorPrimaryDark" />
         </LinearLayout>
 
         <com.google.android.material.textfield.TextInputLayout
@@ -115,7 +115,7 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="?colorPrimary" />
+            android:background="?colorPrimaryDark" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -167,7 +167,7 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="?colorPrimary" />
+            android:background="?colorPrimaryDark" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
