--- a/app/src/Internal/res/values/debug_styles.xml
+++ b/app/src/Internal/res/values/debug_styles.xml
@@ -7,7 +7,7 @@
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorPrimary</item>
+        <item name="colorAccent">@color/colorAccent</item>
         <!--        <item name="colorControlNormal">@color/colorPrimary</item>-->
         <item name="android:windowBackground">#FF000000</item>
     </style>
