--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#66B933</color>
-    <color name="colorPrimaryDark">#66B933</color>
-    <color name="colorAccent">#66B933</color>
+    <color name="colorPrimary">#00ff00</color>
+    <color name="colorPrimaryDark">#00ca00</color>
+    <color name="colorSecondary">#000000</color>
+    <color name="colorSecondaryDark">#2c2c2c</color>
+    <color name="colorAccent">@color/colorSecondaryDark</color>
 <!--    <color name="colorAccent">#000000</color>-->
 </resources>
